# sample-code-for-a-secure-vault-using-aws-nitro-enclaves

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Cargo.toml  buildspec.yml  deny.toml  docker-bake.hcl  index.html  sitemap.xml  vault_template.yml
.claude/: settings.json
.github/workflows/: deploy-docs.yml  docker-bake.yml  rust.yml  secure_workflows.yml  security_audit.yml
.kiro/steering/: product.md  structure.md  tech.md
api/dependencies/: requirements.txt
api/src/app/: constants.py  encryptors.py  enums.py  utils.py  vault.py
architecture/: index.html
deployment/: index.html
docs/: architecture.md  faq.md
enclave/: Cargo.toml  Dockerfile
enclave/benches/: hpke_batch.rs
enclave/src/: constants.rs  expressions.rs  functions.rs  hpke.rs  kms.rs  lib.rs  main.rs  models.rs  utils.rs
enclave/src/aws_ne/: ffi.rs  mod.rs
faq/: index.html
parent/: Cargo.toml  Dockerfile  README.md
parent/src/: application.rs  cbor.rs  configuration.rs  constants.rs  enclaves.rs  errors.rs  imds.rs  lib.rs  main.rs  models.rs  protocol.rs  routes.rs  wire_encoding.rs
parent/tests/: http_integration.rs
post-deployment/: index.html
references/: index.html
search/: search_index.json
security/: index.html
support/: index.html
user-guide/: index.html
vault-protocol/: Cargo.toml
vault-protocol/benches/: roundtrip.rs
vault-protocol/proptest-regressions/: lib.txt
vault-protocol/src/: lib.rs
