[package]
name = "enclave-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
edition = "2024"
rust-version = "1.95"
publish = false
license = "MIT-0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "enclave-vault"
path = "src/main.rs"

# Clippy lints for no-panic Rust hardening
# These help catch panic-prone patterns at compile time
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
# Force all log output through tracing so it can be structured and routed.
print_stdout = "deny"
print_stderr = "deny"

[dependencies]
anyhow = { version = "=1.0.100", default-features = false }
libc = { version = "=0.2.178", default-features = false }
aws-lc-rs = { version = "=1.17.0", default-features = false }
cel-interpreter = { version = "=0.10.0", default-features = false, features = ["json", "chrono"] }
# Direct dep solely because cel-interpreter's "chrono" feature exposes
# chrono types (DateTime<FixedOffset>, etc.) through its public API, which
# our CEL function shims in src/functions.rs (today_utc, age, date) must
# name. The project otherwise prefers jiff; switch here only after
# cel-interpreter drops chrono from its public surface.
chrono = { version = "=0.4.42", default-features = false, features = ["now"] }
data-encoding = { version = "=2.9.0", default-features = false, features = ["alloc"] }
rayon = { version = "=1.10.0", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false }
rustls = { version = "=0.23.40", default-features = false, features = ["aws_lc_rs", "prefer-post-quantum"] }
tracing = { version = "=0.1.44", default-features = false, features = ["log"] }
tracing-subscriber = { version = "=0.3.22", default-features = false, features = ["env-filter", "fmt", "json"] }
vsock = { version = "=0.5.2", default-features = false }
zeroize = { version = "=1.8.2", default-features = false, features = ["zeroize_derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "=0.1.48", default-features = false, features = ["secure"] }

[dev-dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }
