[package]
name = "enclave-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "enclave-vault"
path = "src/main.rs"

# Lints are defined once in the root workspace manifest.
[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
aws-lc-rs = { workspace = true }
# `chrono` is a direct dep solely because the `cel` crate's `chrono`
# feature exposes chrono types (`Value::Timestamp(chrono::DateTime<FixedOffset>)`,
# `Value::Duration(chrono::Duration)`) through its public API, which
# our CEL function shims in src/functions.rs (today_utc, age, date)
# must name. The project otherwise prefers jiff; switch here only
# after `cel` drops chrono from its public surface. As of v0.13.0
# the chrono leak is still present.
cel = { workspace = true, features = ["json", "chrono"] }
chrono = { workspace = true, features = ["now"] }
data-encoding = { workspace = true, features = ["alloc"] }
libc = { workspace = true }
rayon = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs", "prefer-post-quantum"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
vault-protocol = { workspace = true }
vsock = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support"] }
proptest = { workspace = true, features = ["std"] }

[[bench]]
name = "hpke_batch"
harness = false
