[package]
name = "parent-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
description = "Parent instance application for AWS Nitro Enclaves Vault"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
default-run = "parent-vault"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parent-vault"
path = "src/main.rs"

# Lints are defined once in the root workspace manifest.
[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["rt-tokio", "behavior-version-latest", "default-https-client"] }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true, features = ["client"] }
axum = { workspace = true, features = ["http1", "json", "tokio", "tracing"] }
ciborium = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env", "help"] }
fastrand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "tracing", "time", "signal"] }
tower-http = { workspace = true, features = ["limit", "timeout"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "json"] }
validator = { workspace = true, features = ["derive"] }
vault-protocol = { workspace = true }
vsock = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
ciborium = { workspace = true }
proptest = { workspace = true, features = ["std"] }
tokio-test = { workspace = true }
