[package]
name = "vault-protocol"
version = "0.1.0"
authors = ["Justin Plock <jplock@smoketurner.com>"]
description = "Wire protocol between the parent and the Nitro Enclave (length-framed, versioned, CBOR-serialized)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Lints are defined once in the root workspace manifest.
[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
ciborium = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["attributes"] }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support"] }
proptest = { workspace = true, features = ["std"] }

[[bench]]
name = "roundtrip"
harness = false
